# daily-mentor-plugins-staging

./: .gitignore  README.md
plugins/daily-mentor-tools/skills/report-card/: README.md  SKILL.md  pyproject.toml
plugins/daily-mentor-tools/skills/report-card/data/: benchmarks.json  chart_of_accounts.json  defaults.json
plugins/daily-mentor-tools/skills/report-card/scripts/: audit.py  check_deps.py  cli.py  fx.py  ingest.py  models.py  preflight.py  render_html.py  render_xlsx.py
plugins/daily-mentor-tools/skills/report-card/scripts/compute/: brand_profit_sim.py  daily_tracker.py  final_report_card.py  financial_position.py  helpers.py  homepage.py  ltv.py  monthly_pl.py  nccm.py  notes_reconciliation.py
plugins/daily-mentor-tools/skills/report-card/templates/assets/: dm-logo.avif
plugins/daily-mentor-tools/skills/report-card/templates/static/: report.css  report.js
plugins/daily-mentor-tools/skills/report-card/tests/: test_gates.py
plugins/report-card/: README.md  pyproject.toml
plugins/report-card/.claude-plugin/: plugin.json
plugins/report-card/commands/: report-card.md
plugins/report-card/scripts/: audit.py  cli.py  ingest.py  models.py  preflight.py  render_html.py  transform.py
plugins/report-card/scripts/compute/: change_log.py  daily_tracker.py  design_legend.py  final_report_card.py  financial_position.py  helpers.py  homepage.py  ltv.py  monthly_pl.py  nccm.py
plugins/report-card/skills/report-card/: SKILL.md
plugins/report-card/templates/static/: report.js
plugins/report-card/tests/: make_synthetic_pack.py  test_gates.py
(+5 files in other folders)
