[project]
name = "report-card-skill"
version = "0.4.0"
description = "Report Card skill (part of the Daily Mentor Tools plugin) — 12-tab e-commerce diagnostic from a standardised input pack."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
